[gd_scene load_steps=4 format=2]

[ext_resource path="res://UI/ui_skill_inactive.png" type="Texture" id=1]
[ext_resource path="res://UI/ui_skill.png" type="Texture" id=2]
[ext_resource path="res://UI/SkillBar.gd" type="Script" id=3]

[node name="SkillBar" type="Control"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -20.0
margin_top = -40.0
margin_right = 20.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -133.0
margin_top = -76.0
margin_right = 133.0
margin_bottom = -2.0
grow_horizontal = 2
grow_vertical = 0
rect_min_size = Vector2( 266, 74 )
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Background"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.25
margin_top = 5.0
margin_right = -4.75
margin_bottom = -5.0
custom_constants/separation = 5
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Shortcut1" type="TextureRect" parent="Background/HBoxContainer" groups=[
"shortcuts",
]]
margin_left = 62.0
margin_top = 17.0
margin_right = 91.0
margin_bottom = 46.0
rect_min_size = Vector2( 29, 29 )
size_flags_vertical = 4
texture = ExtResource( 1 )
expand = true

[node name="TextureButton" type="TextureButton" parent="Background/HBoxContainer/Shortcut1"]
margin_left = 2.0
margin_top = 2.0
margin_right = 27.0
margin_bottom = 27.0
rect_min_size = Vector2( 25, 25 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Shortcut2" type="TextureRect" parent="Background/HBoxContainer" groups=[
"shortcuts",
]]
margin_left = 96.0
margin_top = 17.0
margin_right = 125.0
margin_bottom = 46.0
rect_min_size = Vector2( 29, 29 )
size_flags_vertical = 4
texture = ExtResource( 1 )
expand = true

[node name="TextureButton" type="TextureButton" parent="Background/HBoxContainer/Shortcut2"]
margin_left = 2.0
margin_top = 2.0
margin_right = 27.0
margin_bottom = 27.0
rect_min_size = Vector2( 25, 25 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Shortcut3" type="TextureRect" parent="Background/HBoxContainer" groups=[
"shortcuts",
]]
margin_left = 130.0
margin_top = 17.0
margin_right = 159.0
margin_bottom = 46.0
rect_min_size = Vector2( 29, 29 )
size_flags_vertical = 4
texture = ExtResource( 1 )
expand = true

[node name="TextureButton" type="TextureButton" parent="Background/HBoxContainer/Shortcut3"]
margin_left = 2.0
margin_top = 2.0
margin_right = 27.0
margin_bottom = 27.0
rect_min_size = Vector2( 25, 25 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Shortcut4" type="TextureRect" parent="Background/HBoxContainer" groups=[
"shortcuts",
]]
margin_left = 164.0
margin_top = 17.0
margin_right = 193.0
margin_bottom = 46.0
rect_min_size = Vector2( 29, 29 )
size_flags_vertical = 4
texture = ExtResource( 1 )
expand = true

[node name="TextureButton" type="TextureButton" parent="Background/HBoxContainer/Shortcut4"]
margin_left = 2.0
margin_top = 2.0
margin_right = 27.0
margin_bottom = 27.0
rect_min_size = Vector2( 25, 25 )
__meta__ = {
"_edit_use_anchors_": false
}
